# MyCompiler

./: CMakeLists.txt  a.out  ast  ast.c  ast.h  calc.l  calc.tab.c  calc.tab.h  calc.y  grammar.tab.c  grammar.tab.h  grammar.y  lex.l  lex.yy.c  main.c  makefile  parser.y  scanner.l
test/: enter.code
